fixing new recipe

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,1 +1,8 @@
-<h1>Index</h1>
+<h1>All Recipes</h1>
+
+<% @recipes.each do |recipe| %>
+<div>
+    <%= recipe.name %>
+</div>
+<%end %>
+<%= link_to "Add a new recipe", new_recipe_path %>
