--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -14,12 +14,12 @@
 
 <p>
 <%= f.label :notes %>
-<%= f.text_area :notes, placeholder: "Any special messages"%>
+<%= f.text_area :notes, placeholder: "Any special messages you want to say"%>
 </p>
 
 <p>
 <%= f.label :special_tools %>
-<%= f.text_area :special_tools, placeholder: "Equipment list"%>
+<%= f.text_area :special_tools, placeholder: "Any equipment needed"%>
 </p>
 
 <p>
@@ -29,7 +29,7 @@
 
 <p>
 <%= f.label :ingredients %>
-<%= f.text_field :ingredients, placeholder: "List ingredients"%>
+<%= f.text_area :ingredients, placeholder: "List ingredients"%>
 </p>
 
 <p>
