--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -2,7 +2,16 @@
 
 <% @recipes.each do |recipe| %>
 <div>
+    <p>
     <%= recipe.name %>
+    </p>
+    <p>
+    <%= recipe.approximate_time %> minutes
+    </p>
+    <p>
+    <%= recipe.creator %>
+    </p>
+    star ratings
 </div>
 <%end %>
 <%= link_to "Add a new recipe", new_recipe_path %>
