--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,9 @@
 
   <body>
     <%= yield %>
+    <footer>
+  <p>Created by: Richard Chang</p>
+  <p>Contact information: <a href="mailto:rchang9999@yahoo.com">rchang9999@yahoo.com</a>.</p>
+</footer>
   </body>
 </html>
