changed layout and database

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,9 @@
   <body>
     <%= yield %>
     <footer>
-  <p>Created by: Richard Chang</p>
-  <p>Contact information: <a href="mailto:rchang9999@yahoo.com">rchang9999@yahoo.com</a>.</p>
+  <p>Created by: Richard Chang <br>
+    All Rights Reserved</p>
+
 </footer>
   </body>
 </html>
