--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -4,7 +4,7 @@
 
 <p>
 <%= f.label :name %>
-<%= f.text_field :name, placeholder: "What is it?"%>
+<%= f.text_field :name, placeholder: "Your recipe"%>
 </p>
 
 <p>
@@ -14,7 +14,7 @@
 
 <p>
 <%= f.label :notes %>
-<%= f.text_area :notes, placeholder: "Any special messages you want to say"%>
+<%= f.text_area :notes, placeholder: "Any messages/summary you want to say"%>
 </p>
 
 <p>
