--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -17,7 +17,9 @@
 <div class="">
 
 </div>
-
+<%= link_to "Add comment", new_recipe_comment_path(@recipe) %>
 <div class="">
+  <br>
+  <br>
   <%= link_to 'Back', recipes_path %>
 </div>
