--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New comment</h1>
 
 
-<% form_for ([@recipe, @recipe.comments]) do |f| %>
+<%= form_for ([@recipe, @comment]) do |f| %>
 
 <p>
 <%= f.label :name %>
