--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,1 +1,8 @@
 <h1>login form</h1>
+<%= form_tag(:action => "login", :method => "post") do %>
+  <%= label_tag(:username) %>
+  <%= text_field_tag(:username) %>
+  <%= label_tag(:password) %>
+  <%= text_field_tag(:password) %>
+  <%= submit_tag("Login") %>
+<% end %>
