--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,7 +1,8 @@
 <div id="head">
   <ul>
     <li>
-    <strong>All recipes</strong></li>
+    <strong>All recipes</strong>
+    </li>
     <li>
     <%= link_to "Log in", login_path %></li>
     <li>
