--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -7,7 +7,7 @@
   <%= @recipe.creator %><br>
   <%= @recipe.notes %><br>
   <%= @recipe.special_tools %><br>
-  <%= @recipe.approximate_time %><p>minutes</p><br>
+  <%= @recipe.approximate_time %><span> minutes</span><br>
   <%= @recipe.ingredients %><br>
   <%= @recipe.created_at.strftime("Created at: %B %d, %Y") %><br>
 </div>
