--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,5 +1,22 @@
 <h1>A New Recipe</h1>
 
+<% if @recipe.errors.any? %>
+  <div id="error_explanation">
+    <h2>
+      <%= pluralize(@recipe.errors.count, "error") %>
+      prohibited this recipe:
+    </h2>
+
+    <ul>
+    <% @recipe.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
+
+
 <%= form_for @recipe do |f| %>
 
 <p>
@@ -19,7 +36,7 @@
 
 <p>
 <%= f.label :special_tools %>
-<%= f.text_area :special_tools, placeholder: "Any equipment needed"%>
+<%= f.text_field :special_tools, placeholder: "Any equipment needed"%>
 </p>
 
 <p>
