--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,14 +1,11 @@
 
-footer {
-    position: fixed;
+.footer {
     left: 0;
     bottom: 0;
     width: 100%;
     background-color: rgb(153, 102, 51);
     color: black;
     text-align: center;
-}
-
-footer:hover{
-  visibility: hidden;
+    padding: 5px 0px;
+    clear:both;
 }
