--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,11 @@
 
   <body>
     <%= yield %>
-    <footer>
-  <p>Created by: Richard Chang <br>
-    All Rights Reserved</p>
-
-</footer>
   </body>
+
+  <div class="footer">
+  <p>Created by: Richard Chang <br>
+  All Rights Reserved
+  </p>
+  </div>
 </html>
