--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -32,3 +32,7 @@
 <br>
 <hr>
 <%= link_to "Add your own recipe", new_recipe_path %>
+
+<div class="">
+  <%= link_to 'Logout', logout_path %>
+</div>
