--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,11 +1,14 @@
 
 .footer {
+    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
     background-color: rgb(153, 102, 51);
     color: black;
     text-align: center;
-    padding: 5px 0px;
-    clear:both;
+}
+
+.footer:hover{
+  visibility:hidden;
 }
