--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   </body>
 
   <div class="footer">
-  <p>Created by: Richard Chang <br>
+  <p>	&copy; 2018 Richard Chang <br>
   All Rights Reserved
   </p>
   </div>
