--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -3,7 +3,7 @@
 <%= form_for @recipe do |f| %>
 
 <p>
-<%= f.label :name %>
+<%= f.label :name, "Recipe name" %>
 <%= f.text_field :name, placeholder: "Your recipe"%>
 </p>
 
@@ -13,7 +13,7 @@
 </p>
 
 <p>
-<%= f.label :notes %>
+<%= f.label :notes, "Description"%>
 <%= f.text_area :notes, placeholder: "Any messages/summary you want to say"%>
 </p>
 
@@ -29,11 +29,11 @@
 
 <p>
 <%= f.label :ingredients %>
-<%= f.text_area :ingredients, placeholder: "List ingredients"%>
+<%= f.text_area :ingredients, placeholder: "ex. 1 whole chicken"%>
 </p>
 
 <p>
-<%= f.submit %>
+<%= f.submit "Submit"%>
 </p>
 
 <% end %>
