--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>new user form</h1>
+<h1>Sign up</h1>
 
 <% if @user.errors.any? %>
   <div id="error_explanation">
@@ -30,7 +30,7 @@
 </p>
 
 <p>
-<%= f.submit %>
+<%= f.submit "Sign in" %>
 </p>
 
 <% end %>
