--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -27,9 +27,9 @@
     </p>
     <p>
     Posted by: <%= recipe.creator %>
-  </p><%= link_to "edit", edit_recipe_path(recipe) %>
-  <%= link_to "delete", recipe, :method => :delete, data: { confirm: 'Are you sure?' } %>
-  <%= link_to "more info", recipe_path(recipe) %><br>
+  </p><button><%= link_to "edit", edit_recipe_path(recipe) %></button>
+  <button><%= link_to "delete", recipe, :method => :delete, data: { confirm: 'Are you sure?' } %></button>
+  <button><%= link_to "more info", recipe_path(recipe) %><br></button>
     <%# star ratings, optional picture %>
 </div>
 <%end %>
@@ -39,5 +39,5 @@
 <%= link_to "Add your own recipe", new_recipe_path %>
 
 <div class="">
-  <%= link_to 'Logout', logout_path %>
+  <button><%= link_to 'Logout', logout_path %></button>
 </div>
