--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,15 +1,11 @@
+  <h1><%= @recipe.name %></h1><br>
 <div class="">
-  <h1>The recipe</h1>
-</div>
-
-<div class="">
-  <%= @recipe.name %><br>
   <%= @recipe.creator %><br>
   <%= @recipe.notes %><br>
   <%= @recipe.special_tools %><br>
   <%= @recipe.approximate_time %><span> minutes</span><br>
   <%= @recipe.ingredients %><br>
-  <%= @recipe.created_at.strftime("Created at: %B %d, %Y") %><br>
+  <%= @recipe.created_at.strftime("Posted at: %B %d, %Y") %><br>
 </div>
 
 <h3>Ratings: <%=@sum%>
@@ -21,10 +17,10 @@ out 5 &#9733;</h3>
 <div class="">
     <% @recipe.comments.each do |comment| %>
     <p>
-      <%= comment.content %>
+      <strong><%= comment.content %></strong><br>
+      - <%= comment.name %>
     </p>
-    <p> By
-      <%= comment.name %>
+    <p>
     </p>
 
   <% end %>
@@ -34,9 +30,9 @@ out 5 &#9733;</h3>
 <div class="">
   <br>
   <br>
-  <%= link_to 'Back', recipes_path %>
+  <button><%= link_to 'Back', recipes_path %></button>
 </div>
 
 <div class="">
-  <%= link_to 'Logout', logout_path %>
+  <button><%= link_to 'Logout', logout_path %></button>
 </div>
