--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,8 +1,14 @@
-<h1>login form</h1>
-<%= form_tag(:action => "login", :method => "post") do %>
-  <%= label_tag(:username) %>
-  <%= text_field_tag(:username) %>
-  <%= label_tag(:password) %>
-  <%= text_field_tag(:password) %>
-  <%= submit_tag("Login") %>
-<% end %>
+<h1>Log in</h1>
+<div class="">
+  <%= form_tag(:action => "login", :method => "post") do %>
+  <p>
+    <%= label_tag(:username) %>
+    <%= text_field_tag(:username) %>
+  </p>
+  <p>
+    <%= label_tag(:password) %>
+    <%= text_field_tag(:password) %>
+  </p>
+    <%= submit_tag("Login") %>
+  <% end %>
+</div>
