--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -2,14 +2,15 @@
 <div class="">
   <%= form_tag(:action => "login", :method => "post") do %>
   <p>
-    <%= label_tag(:username) %>
+    <%= label_tag(:username) %>:
     <%= text_field_tag(:username) %>
   </p>
   <p>
-    <%= label_tag(:password) %>
+    <%= label_tag(:password) %>:
     <%= text_field_tag(:password) %>
   </p>
     <%= submit_tag("Login") %>
   <% end %>
 </div>
+<br>
 <%= link_to "Sign up", new_user_path %>
