--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Sign up</h1>
-
+<div class = "red">
 <% if @user.errors.any? %>
   <div id="error_explanation">
     <h2>
@@ -14,18 +14,19 @@
     </ul>
   </div>
 <% end %>
+</div>
 
 <%= form_for @user do |f| %>
   <p>
-  <%= f.label :username %>
+  <%= f.label :username %>:
   <%= f.text_field :username %>
   </p>
 <p>
-  <%= f.label :password %>
+  <%= f.label :password %>:
   <%= f.password_field :password %>
 </p>
 <p>
-  <%= f.label :password_confirmation, "Confirm password" %>
+  <%= f.label :password_confirmation, "Confirm password" %>:
   <%= f.password_field :password_confirmation %>
 </p>
 
@@ -35,5 +36,5 @@
 
 <% end %>
 
-<%= link_to('Log in with Facebook!', '/auth/facebook') %>
+<%= link_to('Log in with Facebook!', '/auth/facebook') %><br>
 <%= link_to('Log in with Github!', '/auth/github') %>
