--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -13,4 +13,7 @@
   <% end %>
 </div>
 <br>
+<%= link_to('Log in with Github!', '/auth/github') %>
+<br>
+<br>
 <%= link_to "Sign up", new_user_path %>
