--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,5 +1,6 @@
 <h1>New comment</h1>
 
+<div class="red">
 <% if @comment.errors.any? %>
   <div id="error_explanation">
     <h2>
@@ -14,15 +15,15 @@
     </ul>
   </div>
 <% end %>
-
+</div>
 <%= form_for ([@recipe, @comment]) do |f| %>
 
 <p>
-<%= f.label :name %>
+<%= f.label :name %>:
 <%= f.text_field :name, placeholder: "ex. Bob Smith"%>
 </p>
 <p>
-<%= f.label :content, "Message"%>
+<%= f.label :content, "Message"%>:
 <%= f.text_area :content, placeholder: "ex. Great recipe!"%>
 </p>
 <p>
