buttons and links, oauth fixed

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -40,9 +40,9 @@
 <div class="">
   <br>
   <br>
-  <button><%= link_to 'Back', recipes_path %></button>
+<%= link_to 'Back', recipes_path %>
 </div>
 
 <div class="">
-  <button><%= link_to 'Logout', logout_path %></button>
+  <%= link_to 'Logout', logout_path %>
 </div>
