--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -35,9 +35,9 @@
     </p>
     <p class = "small">
     Posted by: <%= recipe.creator %>
-  </p><button ><%= link_to "edit", edit_recipe_path(recipe) %></button>
-  <button><%= link_to "delete", recipe, :method => :delete, data: { confirm: 'Are you sure?' } %></button>
-  <button><%= link_to "more info", recipe_path(recipe) %><br></button>
+  </p><%= link_to "edit", edit_recipe_path(recipe) %>
+  <%= link_to "delete", recipe, :method => :delete, data: { confirm: 'Are you sure?' } %>
+  <%= link_to "more info", recipe_path(recipe) %><br>
     <%# star ratings, optional picture %>
 </div>
 <%end %>
@@ -51,5 +51,5 @@
 <br>
 
 <div >
-  <button><%= link_to 'Logout', logout_path %></button>
+  <%= link_to 'Logout', logout_path %>
 </div>
