--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -10,7 +10,7 @@
   </div>
 
 <br>
-<div class="center about">
+<div class="center about brown">
   Summary: <%= @recipe.notes %><br>
   Tools: <%= @recipe.special_tools %><br>
   Ingredients: <%= @recipe.ingredients %><br>
