--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -35,9 +35,9 @@
     </p>
     <p class = "small">
     Posted by: <%= recipe.creator %>
-  </p><%= link_to "edit", edit_recipe_path(recipe) %>
-  <%= link_to "delete", recipe, :method => :delete, data: { confirm: 'Are you sure?' } %>
-  <%= link_to "more info", recipe_path(recipe) %><br>
+  </p><%= link_to "Edit", edit_recipe_path(recipe) %>
+  <%= link_to "Delete", recipe, :method => :delete, data: { confirm: 'Are you sure?' } %>
+  <%= link_to "More Info", recipe_path(recipe) %><br>
     <%# star ratings, optional picture %>
 </div>
 <%end %>
