added personal page with recipes and ratings

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -50,6 +50,10 @@
 <br>
 <br>
 
+<%= link_to "See own recipes and ratings", personal_path %>
+<br>
+<br>
+
 <div >
   <%= link_to 'Logout', logout_path %>
 </div>
