--- a/app/views/users/personal.html.erb
+++ b/app/views/users/personal.html.erb
@@ -1,7 +1,10 @@
-<h1> Recipes and Ratings </h1>
+
+<h1 class = "cente"> Recipes and Ratings </h1> 
+
 <br/>
 <br/>
 <hr/>
+<div class = "blue">
 <h2>Your recipes:</h2>
 
 <% @recipes.each do |recipe| %>
@@ -12,7 +15,7 @@
         <br/>
     </h4>
  <%end%>
-
+</div>
 
 
 
