--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -111,3 +111,11 @@ div.salmander{
 div.brown{
   color: #993300;
 }
+
+div.blue {
+  color: rgb(0, 153, 204);
+}
+
+.cente {
+  text-align: center;
+}
