add fast recipes for scope

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -41,6 +41,10 @@
     <%# star ratings, optional picture %>
 </div>
 <%end %>
+<br>
+<br>
+<br>
+<%= link_to "Find recipes under 30 mins", fast_path %>
 
 <br>
 <br>
