users has many comments through recipes

--- a/app/views/users/personal.html.erb
+++ b/app/views/users/personal.html.erb
@@ -17,8 +17,14 @@
     </h4>
  <%end%>
 </div>
+<br>
 
-
+<h2 id="black">All comments(made by you)</h2>
+<ol>
+<% @messages.each do |message| %>
+    <li><%=message.content%></li>
+    <%end%>
+</ol>
 
 
 
