saving css changes

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -11,9 +11,9 @@
 
 <br>
 <div class="center about brown">
-  Summary: <%= @recipe.notes %><br>
-  Tools: <%= @recipe.special_tools %><br>
   Ingredients: <%= @recipe.ingredients %><br>
+  Tools: <%= @recipe.special_tools %><br>
+  Summary: <br><%= @recipe.notes %><br>
 </div>
 
 <div class="center">
