--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+<%= f.label :phone_number %>
+<%= f.text_field :phone_number, placeholder: "###-###-####"%>
+</p>
+
+<p>
 <%= f.label :notes %>
 <%= f.text_area :notes, placeholder: "Directions and Summary"%>
 </p>
