--- a/app/views/caterers/new.html.erb
+++ b/app/views/caterers/new.html.erb
@@ -1,14 +1,14 @@
-<h1>Sign up</h1>
+<h1>Sign up as caterer</h1>
 <div class = "red">
-<% if @user.errors.any? %>
+<% if @caterer.errors.any? %>
   <div id="error_explanation">
     <h2>
-      <%= pluralize(@user.errors.count, "error") %>
+      <%= pluralize(@caterer.errors.count, "error") %>
       prohibited this user:
     </h2>
 
     <ul>
-    <% @user.errors.full_messages.each do |msg| %>
+    <% @caterer.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
     <% end %>
     </ul>
@@ -17,7 +17,7 @@
 </div>
 <br>
 
-<%= form_for @user do |f| %>
+<%= form_for @caterer do |f| %>
 <p>
   <%= f.label :username %>:
   <%= f.text_field :username %>
@@ -37,4 +37,4 @@
 
 <% end %>
 
-<%=link_to "I'm a caterer. Sign up here.", new_caterer_path %>
+<%=link_to "Back", new_user_path %>
