--- a/app/views/caterers/login.html.erb
+++ b/app/views/caterers/login.html.erb
@@ -1,9 +1,9 @@
-<h1>Log in</h1>
+<h1>Log in as caterer</h1>
 <br>
 
 <br>
 <div class="">
-  <%= form_tag(:action => "login", :method => "post") do %>
+  <%= form_tag(:action => "caterer_login", :method => "post") do %>
   <p>
     <%= label_tag(:username) %>:
     <%= text_field_tag(:username) %>
@@ -15,11 +15,9 @@
     <%= submit_tag("Login") %>
   <% end %>
 </div>
-<br>
-<%= link_to('Log in with Github!', '/auth/github') %>
-<br>
-<br>
-<%= link_to('I\'m a caterer. Log in here.', caterer_login_path) %>
+
 <br>
 <br>
-<%= link_to "Sign up", new_user_path %>
+
+
+<%=link_to('Back', login_path)%>
