added contacts page to caterer

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -54,7 +54,12 @@
 <br>
 <br>
 
+
 <%= link_to "See own recipes and ratings", personal_path %>
+<br>
+<br>
+
+<%= link_to "See contacts(as caterer)", contacts_path %>
 <br>
 <br>
 
