--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -18,7 +18,7 @@
 
 <div class="center">
  
-<%=form_tag(controller: "caterers", action: "setup", method: "post")%>
+<%=form_tag(controller: "caterers", action: "setup/#{@recipe.id}", method: "post")%>
 <%= submit_tag("Add contact information(You need to be a caterer)") %>
 </div>
 
