--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -18,7 +18,7 @@
 
 <div class="center">
  
-<%=link_to "Add contact information(You need to be a caterer)", setup_path(@recipe.id) %>
+<%=button_to "Add contact information(You need to be a caterer)", setup_path(@recipe.id) %>
 </div>
 
 
